gitops/apps/rhcl-demo/base/resources/91-istio-serviceentry-espn.yaml
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: espn-site-api
  namespace: demo
  annotations:
    argocd.argoproj.io/sync-wave: "50"
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
spec:
  hosts:
    - site.api.espn.com
  location: MESH_EXTERNAL
  resolution: DNS
  ports:
    - number: 443
      name: https
      protocol: TLS
